src/objects/ER_Acceptor__c.object
<CustomObject>
    <fields>
        <fullName>ER_AID_Authorization__c</fullName>
        <label>AID Authorization</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_AID_Clearing__c</fullName>
        <label>AID Clearing</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_AID__c</fullName>
        <label>AID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Acceptor_Type__c</fullName>
        <label>Acceptor Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POS</fullName>
                    <default>true</default>
                    <label>POS</label>
                </value>
                <value>
                    <fullName>Payment Gate</fullName>
                </value>
                <value>
                    <fullName>Aggregator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <formula>TEXT(Owner:User.ER_Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Card_Operational_System_ID__c</fullName>
        <externalId>true</externalId>
        <label>Card Operational System ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ER_Category_name__c</fullName>
        <label>Category name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Last_date_of_Sync__c</fullName>
        <label>Last date of Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ER_MCC_Authorization__c</fullName>
        <label>MCC Authorization</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_MCC_Clearing__c</fullName>
        <label>MCC Clearing</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_MID_AID__c</fullName>
        <label>MID_AID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_MID_Authorization__c</fullName>
        <label>MID Authorization</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_MID_Clearing__c</fullName>
        <label>MID Clearing</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_MID__c</fullName>
        <label>MID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Paper_Operational_System_ID__c</fullName>
        <externalId>true</externalId>
        <label>Paper Operational System ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ER_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store</label>
        <referenceTo>ER_Store__c</referenceTo>
        <relationshipLabel>Acceptors</relationshipLabel>
        <relationshipName>Acceptors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_SubMID_Authorization__c</fullName>
        <label>Sub MID Authorization</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Sub_MID_Clearing__c</fullName>
        <label>Sub MID Clearing</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_TID_Authorization__c</fullName>
        <externalId>true</externalId>
        <label>TID Authorization</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_TID_Clearing__c</fullName>
        <label>TID Clearing</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Acceptor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ER_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Hungary_Acceptors</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Business_Unit__c</field>
            <operation>equals</operation>
            <value>HU</value>
        </filters>
        <label>Hungary Acceptors</label>
        <sharedTo>
            <roleAndSubordinates>HUN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Acceptor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acceptors</pluralLabel>
    <recordTypes>
        <fullName>ER_Merchant_Acceptor_RT</fullName>
        <active>true</active>
        <label>Merchant Acceptor</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VRHU07_MIDAuthorization_Format</fullName>
        <active>true</active>
        <description>This validation rule ensure that the format of the MID Authorization is correctly captured by User, and follow the hungarian format. This rule can be bypassed by a User by checking the field &apos;BypassVR&apos; on its account.</description>
        <errorConditionFormula>AND( 
NOT($User.ER_BypassVR__c),
ER_Business_Unit__c =&apos;HU&apos;,  
LEN(ER_MID_Authorization__c) &gt; 40)</errorConditionFormula>
        <errorDisplayField>ER_MID_Authorization__c</errorDisplayField>
        <errorMessage>The length of the MID Authorization must contain at most 40 characters</errorMessage>
    </validationRules>
</CustomObject>